Fixes to make things work on IE, which incidentally must die die die.

--- a/pages/css/msgs.css
+++ b/pages/css/msgs.css
@@ -83,7 +83,6 @@
 }
 
 .titledListPanel {
-  width: 100%;
   margin: 5px;
 }
 
